# project-ds

./: .gitignore  BPuzzle.cc  BPuzzle.h  CMakeLists.txt  CNF.cc  CNF.h  DPLL.cc  DPLL.h  Strategy.cc  Strategy.h  game_gen.cc  getChessboard.js  main.cc  main.cpp  readme.md
board/: test.txt
boardCrawler/: package.json
cxx/: BPuzzle.cc  BPuzzle.h  CNF.h  DPLL.cc  Strategy.cc  Strategy.h  game_gen.cc  sat_solver.cc
ts/: crawler.ts  package.json
ts/app/main/: main.ts
ts/app/renderer/components/: exampleapp.tsx
ts/app/renderer/components/board/: board.tsx  styles.less
ts/app/renderer/components/game/: game.tsx  styles.less
ts/app/renderer/models/ipc/: ipcRenderer.ts
ts/app/renderer/models/redux/: actions.ts  reducers.ts  store.ts
